# 6G_RoboFUSE

./: README.md  sapr_data.json  sapr_data_backup.json  test_import.py  time_division_main_controller.py  tutorial.txt
ESP32/: .gitignore  Readme.odt  debug_d2d.txt  read_serial2.py  received_distance.json  serial_data.py  serial_data_ismac.py
ESP32/3d printed designs/: FMCW_sensor_print.stl  FMCW_sensor_stand.step  Robomaster_mask v1.stl  Robomaster_mask.step  esp32_case_sliding.f3d  esp_32_sliding v1.stl  esp_32_sliding.step  robomaster_mask v4.stl
ESP32/D2d_demo/: ros2_serial.py
ESP32/MPU6050/: MPU6050_README.odt  mpu6050_calibrated.py  mpu6050_simpletest.py
ESP32/Sender_with_auto_reset/: Sender_with_auto_reset.ino
ESP32/archiv/: debugger.py  received_distance.json
ESP32/archiv/Sender_with_auto_reset/: Sender_with_auto_reset.ino
ESP32/flag_d2d/: Read_me_flag.odt  Receive_flag_values.ino  multi_thread.py  send_serial_data_jetson_to_esp32.py  transmitter_flag_values.ino
ESP32/sapr&euclidean code/: Read_me_sapr.odt  Reciever_ESP32.ino  Transmitter_ESP32.ino  publisher_sed_data_esp32_to_jetson.py  send_chunk_data_Jetson_to_ESP32.py
ISMAC/: .gitignore
Sensing/pymmWave/: ReadMe ROS Radar.md  dyn_ros_pub.py  py_mmw_main.py  py_mmw_main_robomaster.py  ros_pub_log_v1.py  ros_pub_log_v2.py  ros_py_mmw_main.py  run_pymmwave_robomaster.txt
Sensing/pymmWave/config/: py_mmw_setup.json  xwr68xx_profile_2024_07_16_20_fps.cfg
Sensing/pymmWave/lib/: serial_comm.py
Sensing/pymmWave/mss/: x8_handler.py
Sensing/pymmWave/parser_scripts/: data_parser.py
Sensing/ros_sensing/: .gitignore  README.md
Sensing/ros_sensing/archiv/: DataHandlerClass_edit.cpp
Sensing/ros_sensing/archiv/include/: DataHandlerClass_ori_1902.h
Sensing/ros_sensing/archiv/launch/: humble_composition.launch.py  mmwave_datahdl_socket_launch.py  mmwave_datahdl_socket_launch_rosbag.py  mmwave_datahdl_socket_launch_rosbag_ep03.py
helper/: waypoint_scenario.py
helper/recording/: robofuse_recording.sh  rosbag_play.rviz
helper/recording/rosbag_visualization/: rosbag_play_ep03.rviz  rosbag_play_ep05.rviz  rosbag_visualization tutorial.txt
helper/recording/rosbag_visualization/rona_navigation/: CMakeLists.txt  package.xml
helper/recording/rosbag_visualization/rona_navigation/config/: nav2_params.yaml  robomaster_nav2_circular.yaml  robomaster_nav2_normal.yaml  robomaster_nav2_obstacle.yaml  robomaster_nav2_params.yaml  robomaster_nav2_slow.yaml
helper/recording/rosbag_visualization/rona_navigation/config/rviz/: nav2_namespaced.rviz  nav2_robomaster_view.rviz
helper/recording/rosbag_visualization/rona_navigation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
helper/recording/rosbag_visualization/rona_navigation/install/rona_navigation/local/lib/python3.10/dist-packages/rona_navigation-0.0.0-py3.10.egg-info/: SOURCES.txt
helper/recording/rosbag_visualization/rona_navigation/install/rona_navigation/share/rona_navigation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
helper/recording/rosbag_visualization/rona_navigation/install/rona_navigation/share/rona_navigation/config/: dev_nav2_params.yml  nav2_params.yaml  navigate_w_recovery.xml  robomaster_nav2_amcl_params.yaml  robomaster_nav2_params.yaml  robomaster_nav2_params_slow_mapping.yaml  robot_localization_ekf.yaml
helper/recording/rosbag_visualization/rona_navigation/install/rona_navigation/share/rona_navigation/config/rviz/: nav2_default_view.rviz
helper/recording/rosbag_visualization/rona_navigation/install/rona_navigation/share/rona_navigation/launch/rviz/: amcl_launch.py  map_server.launch.py  navigation2.launch.py  navigation_launch.py  robomaster_nav_launch.py
helper/recording/rosbag_visualization/rona_navigation/launch/rviz/: follower_bringup_launch.py  navigation_launch.py  robomaster_nav_launch.py  rosbag_rviz_launch.py  rviz_launch.py  test_bringup_launch.py  waypoint_bringup_launch.py
helper/recording/rosbag_visualization/rona_navigation/maps/: map.yaml
helper/recording/rosbag_visualization/rona_navigation/scripts/: Scenario_CPPS_diagonal_robot_1.yaml  Scenario_CPPS_horizontal_robot_1.yaml  Scenario_CPPS_horizontal_robot_2.yaml  Scenario_CPPS_vertical_robot_1_v2.yaml  readme  timestamp_publisher.py  waypoints.yaml
helper/recording/rosbag_visualization/rona_navigation/scripts/dev/: circular_trajectory.py  trial.py  two_robots_grid.py
helper/scenario/: Working Station Positions.txt
helper/trajectory/: Scenario_CPPS_diagonal_robot_1_v3.yaml  Scenario_CPPS_diagonal_robot_2_v2.yaml  Scenario_CPPS_horizontal_robot_1_v2.yaml  Scenario_CPPS_horizontal_robot_2_v2.yaml  Scenario_CPPS_vertical_robot_1.yaml
preprocessing/: radar_vicon_synchronization.ipynb
ros_navstack/: cyclonedds.xml  frames_2025-02-12_17.34.36.gv
ros_navstack/archiv/: cyclonedds_1402_ZFT.xml  cyclonedds_1402_ZFT.xml.bak
ros_navstack/rona_physical_galactic/rona_physical/: CMakeLists.txt  package.xml
ros_navstack/src/: README.md
ros_navstack/src/rona_comm/: CMakeLists.txt  communication_costmap.xml  package.xml
ros_navstack/src/rona_common/: CMakeLists.txt  package.xml
ros_navstack/src/rona_its_msgs/: CMakeLists.txt  package.xml
ros_navstack/src/rona_mqtt/: package.xml  setup.cfg  setup.py
ros_navstack/src/rona_msgs/: CMakeLists.txt  package.xml
ros_navstack/src/rona_physical/: CMakeLists.txt  package.xml  plugins.xml
ros_navstack/src/rona_physical/include/rona_physical/: waypoint_publisher.hpp
ros_navstack/src/rona_physical/launch/: camara_bringup.launch.py  pointcloud_to_laserscan.launch.py  vicon_tf_converter.launch.py
ros_navstack/src/rona_physical/scripts/: camera_pub.py  clear_costmap_on_goal.py  costmap_generator.py
ros_navstack/src/rona_physical/src/vicon/: c.cpp  vicon_obstacle_layer.cpp  vicon_obstacle_layerA.cpp  vicon_obstacle_layerAS4.cpp  vicon_obstacle_layerAS5.cpp  vicon_obstacle_layerAS6.cpp  vicon_obstacle_layerRM.cpp  vicon_tf_converter.cpp
ros_navstack/src/rona_physical/src/waypoint_publisher/: waypoint_publisher.cpp
(+73 files in other folders)
