<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rona_physical</name>
  <version>1.0.0</version>
  <description>RoNa Physical Package</description>
  <maintainer email="emmanuel.hernandez@tu-dortmund.de">Emmanuel Gonzalez</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav2_msgs</depend>

  <depend>tf2_ros</depend>
  <depend>tf2_kdl</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <costmap_2d plugin="${prefix}/plugins.xml" />
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
